# MNER

./: Cargo.toml  experiment.toml  experiment.yaml
src/: main.rs  run.rs
src/run/: commands.rs  config_file.rs  node.rs  nodes.rs
workdir/: test.sh
