[package]
name = "MNER"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-ssh2-tokio = "0.10.0"
clap = { version = "4.5.48", features = ["derive"] }
futures = "0.3.31"
itertools = "0.14.0"
rust-yaml = "0.0.5"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
indexmap = "2.11.4"
toml = "0.9.8"
